--- a/battleship.html
+++ b/battleship.html
@@ -10,7 +10,11 @@
 	<div id="instructionsArea">
 		<h1>Battleship</h1>
 		<p id="instructions">Use the text box to enter your coordinate guess. Try to sink every battleship!</p>
-		h
+<input type="text" id="fireTorpedoInput"></br>
+
+<button onclick="fireTorpedoFunction()">Click Me!</button>
+
+<p id="fireTorpedoText">Nothing to see here.</p>
 	</div>
 
 	<div id="gameboard">
