made the game board work

--- a/battleship.html
+++ b/battleship.html
@@ -10,9 +10,9 @@
 	<div id="instructionsArea">
 		<h1>Battleship</h1>
 		<p id="instructions">Use the text box to enter your coordinate guess. Try to sink every battleship!</p>
-<input type="text" id="fireTorpedoInput"></br>
+<input type="text" id="fireInput"></br>
 
-<button onclick="fireTorpedoFunction()">Click Me!</button>
+<button onclick="fireTorpedo()" class = "torpedo">Click Me!</button>
 
 	</div>
 
